# opensnoop

./: Cargo.toml  README.md
opensnoop/: Cargo.toml  build.rs
opensnoop-common/: Cargo.toml
opensnoop-common/src/: lib.rs
opensnoop-ebpf/: Cargo.toml
opensnoop-ebpf/src/: lib.rs  main.rs
opensnoop/src/: lib.rs  main.rs
